# skew_trade

./: README.md  pyproject.toml
notebooks/: 00_data_quality.ipynb  01_raw_skew.ipynb  02_pca_factors.ipynb  03_walk_forward.ipynb  04_structure_selection.ipynb  05_trade_mechanics.ipynb  06_pnl_analysis.ipynb  07_signal_strategy.ipynb  08_conditioned_strategy.ipynb  09_walk_forward_validation.ipynb
src/: main.py  trade_data.py  walk_forward.py
