[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skew-trade"
version = "0.1.0"
description = "PCA-based equity volatility skew trading strategy for SPXW options"
requires-python = ">=3.10"

dependencies = [
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.8.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
